--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,6 @@
 /* Choices CSS - START  */
 
 .testView{
-    /* height:100vh; */
     margin-bottom: 3rem;
 }
 
@@ -62,8 +61,8 @@
 }
 
 .choiceImg{
-    width:304px;
-    height:500px;
+    width:18rem;
+    height:20rem;
     object-fit: cover;
     border:none;
     border-radius: 30px;
@@ -88,11 +87,11 @@
     margin: 0;
     padding: 0;
     position: relative;
-    height: 100vh;
+    height: 100svh;
     overflow: hidden;
 }
 .answerBox{
-    height: 90vh;
+    height: 90svh;
     overflow-y: scroll;
 }
 .questionInput{
@@ -136,14 +135,14 @@
     color: rgb(53, 53, 53);
 }
 .loader{
-    height: 100vh;
+    height: 100svh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 .firstQsHeader{
-    height: 100vh;
+    height: 100svh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,7 +161,6 @@
 /* Footer CSS - START */
 
 footer{
-    /* height: 40vh; */
     background-color: #ff7023;
     display: flex;
     align-items: center;
@@ -183,7 +181,148 @@ footer{
 
 /* Footer CSS - END  */
 
+/* Chat CSS - START  */
 
+.carouselRandom{
+    margin: 5rem 0;
+}
+
+
+.carouselRandom div{
+    width: 15rem;
+    /* border: 2px solid #ff7023; */
+    height: 18rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.carouselRandom div img{
+    width: 15rem;
+    height: 15rem;
+    margin-top: 0;
+}
+
+.cards img{
+    transition: 0.2s;
+}
+
+.cards img:hover{
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.chatContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100svh;
+    background-image: linear-gradient(to right, #ffefba, #ffffff);
+}
+
+.wrapper{
+    background-color: #eaeaea;
+    border: none;
+    border-radius: 25px;
+    box-shadow: 5px 8px 15px #808080;
+    height: 80svh;
+    width: 80%;
+    position: relative;
+}
+
+.chatHead{
+    height: 9svh;
+    background-color: #ff7023;
+    display: flex;
+    border-radius: 25px 25px 0 0 ;
+}
+
+.chatIcon img{
+    height: 3rem;
+    margin: 10px;
+    margin-left: 40px;
+    border: none;
+    border-radius: 50%;
+}
+.chatDetails h5{
+    margin-top: 14px;
+    margin-bottom: 0;
+    color: #fff;
+}
+
+.chatDetails h5::first-letter{
+    text-transform: capitalize;
+}
+
+.chatDetails p{
+    font-size: 12px;
+    color: #f8f8f8;
+}
+
+.chatInput input[type=text]{
+    width: 85%;
+    height: 4svh;
+    padding: 16px;
+}
+
+.chatInput form{
+    width: 100%;
+    height: 9svh;
+    background-color: #ff7023;
+    display: flex;
+    border-radius:0 0 25px 25px ;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+}
+
+.chatInput input[type=submit]{
+    width:5rem;
+    height: 2.1rem;
+    color: white;
+    background-color: #ff4d00;
+    border: none;
+    border-radius: 0 10px 10px 0;
+}
+
+.chatInput input[type=submit]:hover{
+    background-color: #ffb347;
+}
+
+.message{
+    max-width: 60%;
+    margin: 1rem 2rem 1rem 2rem;
+    border-radius: 10px;
+    font-size: 13px;
+    margin-bottom: 0;
+    padding: 10px;
+    color: #f8f8f8;
+}
+
+.messageBox{
+    height: 62svh;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+}
+
+.outgoing{
+    background: linear-gradient(100deg, rgba(255,255,255,1) 0%, rgba(255,184,70,1) 0%, rgba(255,150,70,1) 37%, rgba(255,112,35,1) 100%);
+    margin-left: auto;
+}
+
+.incoming{
+    background: linear-gradient(100deg, rgba(255,255,255,1) 0%, rgba(75,151,255,1) 0%, rgba(70,134,255,1) 0%, rgba(70,136,255,1) 37%, rgba(45,49,253,1) 100%);
+}
+
+
+/* Chat CSS - END  */
 
 
 
@@ -204,6 +343,13 @@ footer{
     .firstQsHeader h2{
         font-size: 2rem;
     }
+    .choiceImg{
+        width: 16rem;
+        height: 18rem;
+    }
+    .chatInput input[type=text]{
+        width: 55%;
+    }
 
 }
 
@@ -221,6 +367,9 @@ footer{
     .firstQsHeader h2{
         font-size: 2rem;
     }
+    .chatInput input[type=text]{
+        width: 65%;
+    }
 
 }
 /* Medium devices (landscape tablets, 768px and up) */
@@ -233,6 +382,9 @@ footer{
     }
     .firstQsHeader h2{
         font-size: 3rem;
+    }
+    .chatInput input[type=text]{
+        width: 75%;
     }
 }
 /* Large devices (laptops/desktops, 992px and up) */
